done with about me

--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -8,7 +8,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    font-weight: map-get($font-weight , light );
+    font-weight: map-get($font-weight , regular );
 };
 
 h1, h2, h3 {
