--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -67,7 +67,6 @@
         -ms-flex-align: center;
             align-items: center;
     width: 100%;
-    border: solid 1px red;
   }
 }
 
@@ -141,6 +140,10 @@
   }
 }
 
+.about-me-section-light-mode {
+  background: #dfe1e6;
+}
+
 .skills-section__container {
   padding: 2% 0;
 }
@@ -178,13 +181,19 @@
   width: 23%;
 }
 
+@media (max-width: 800px) {
+  .skills-section__container .skills-container .skill {
+    width: 48%;
+  }
+}
+
 .skills-section__container .skill div, .skills-section__container .skill p {
   font-size: 0.8rem;
 }
 
 .skills-section__container .skill h3 {
   font-size: 1.2rem;
-  padding: 10px 0;
+  padding: 10px 0 0 0;
 }
 
 .skills-section__container .skill__icon {
@@ -224,37 +233,29 @@
 
 .testimonials-section__container .testimonials {
   width: 100%;
-  padding: 3% 0;
+  padding: 2% 0 3% 0;
 }
 
-.testimonials-section__container .testimonials .testimonials__cards {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
+.testimonials-section__container .testimonials .rec-carousel-item {
+  height: 100%;
 }
 
-.testimonials-section__container .testimonials .testimonials__cards .testimonial-card {
+.testimonials-section__container .testimonials .rec-carousel-item .rec-item-wrapper {
+  height: 100%;
+}
+
+.testimonials-section__container .testimonials .testimonial-card {
   position: relative;
   background: #0a1720;
-  -webkit-box-shadow: 0 0 0 2px rgba(16, 37, 61, 0.3);
-          box-shadow: 0 0 0 2px rgba(16, 37, 61, 0.3);
-  width: 30%;
-  height: 280px;
+  width: 100%;
+  height: 100%;
+  margin: 5%;
   padding: 3%;
   font-size: 0.8rem;
   color: #c5bfbf;
 }
 
-.testimonials-section__container .testimonials .testimonials__cards .testimonial-card__content {
+.testimonials-section__container .testimonials .testimonial-card__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -272,10 +273,11 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 100%;
+  height: 80%;
+  padding: 8% 5% 0 7%;
 }
 
-.testimonials-section__container .testimonials .testimonials__cards .testimonial-card .quote-icon {
+.testimonials-section__container .testimonials .testimonial-card .quote-icon {
   position: absolute;
   display: inline-block;
   top: 0;
@@ -283,18 +285,18 @@
   width: 0;
   height: 0;
   text-align: center;
-  border-top: 40px solid #06ac85;
-  border-right: 40px solid transparent;
+  border-top: 50px solid #06ac85;
+  border-right: 50px solid transparent;
 }
 
-.testimonials-section__container .testimonials .testimonials__cards .testimonial-card .quote-icon i {
+.testimonials-section__container .testimonials .testimonial-card .quote-icon i {
   position: absolute;
-  top: -33px;
-  left: 5px;
+  top: -40px;
+  left: 8px;
   display: inline-block;
 }
 
-.testimonials-section__container .testimonials .testimonials__cards .testimonial-card__reviewer-info {
+.testimonials-section__container .testimonials .testimonial-card__reviewer-info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -308,17 +310,18 @@
           align-items: center;
   width: 100%;
   width: 100%;
-  height: 40%;
+  height: 30%;
+  padding-bottom: 10%;
 }
 
-.testimonials-section__container .testimonials .testimonials__cards .testimonial-card__reviewer-info img {
+.testimonials-section__container .testimonials .testimonial-card__reviewer-info img {
   width: 70px;
   height: 70px;
   border-radius: 100%;
   border: solid 3px #cecbcb;
 }
 
-.testimonials-section__container .testimonials .testimonials__cards .testimonial-card__reviewer-info--info {
+.testimonials-section__container .testimonials .testimonial-card__reviewer-info--info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -337,6 +340,12 @@
       -ms-flex-align: start;
           align-items: flex-start;
   width: 70%;
+  padding: 8px;
+}
+
+.testimonials-section__container .testimonials .testimonial-card-light-mode {
+  background: #ebebeb;
+  color: #131212;
 }
 
 .testimonials-section__container .testimonials button {
@@ -358,6 +367,11 @@
           box-shadow: 0 0 1px 3px rgba(255, 254, 254, 0.856);
 }
 
+.testimonials-section__container--light-mode {
+  border-top: solid 1px rgba(77, 72, 72, 0.3);
+  border-bottom: solid 1px rgba(77, 72, 72, 0.3);
+}
+
 .projects-section__container .projects-wrapper {
   padding: 2% 0;
   display: -webkit-box;
@@ -376,32 +390,63 @@
 
 .projects-section__container .projects-wrapper .project-card {
   width: 48%;
-  height: 200px;
   margin-bottom: 3%;
   background: #0a1720;
   position: relative;
 }
 
 .projects-section__container .projects-wrapper .project-card:hover .card-after {
-  display: block;
+  opacity: 1;
   position: absolute;
-  top: 45%;
-  left: 30%;
+  left: 0;
+  top: 0;
+  text-align: center;
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+@media (max-width: 1630px) {
+  .projects-section__container .projects-wrapper .project-card:hover .card-after {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
 }
 
 .projects-section__container .projects-wrapper .project-card:hover .card-before {
   -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
-  -webkit-filter: brightness(0.4);
-          filter: brightness(0.4);
+  -webkit-filter: brightness(0.3);
+          filter: brightness(0.3);
 }
 
 .projects-section__container .projects-wrapper .project-card h3 {
-  font-size: 1rem;
+  font-size: 1.2rem;
   text-decoration: underline;
-  padding: 2% 0;
+  padding: 3% 0 0 0;
 }
 
 .projects-section__container .projects-wrapper .project-card div {
@@ -421,13 +466,13 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  -webkit-box-shadow: 0 0 0 2px rgba(16, 37, 61, 0.3);
-          box-shadow: 0 0 0 2px rgba(16, 37, 61, 0.3);
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
 }
 
 .projects-section__container .projects-wrapper .project-card .card-before__img {
   width: 40%;
-  height: 200px;
 }
 
 .projects-section__container .projects-wrapper .project-card .card-before__img img {
@@ -438,7 +483,7 @@
 }
 
 .projects-section__container .projects-wrapper .project-card .card-before__content {
-  width: 55%;
+  width: 58%;
   height: 100%;
   color: #c5bfbf;
   line-height: 20px;
@@ -450,15 +495,43 @@
   font-size: 0.7rem;
 }
 
+@media (max-width: 1630px) {
+  .projects-section__container .projects-wrapper .project-card .card-before {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .projects-section__container .projects-wrapper .project-card .card-before__img {
+    width: 100%;
+    height: 300px;
+  }
+  .projects-section__container .projects-wrapper .project-card .card-before__content {
+    width: 100%;
+    height: 180px;
+    padding: 3% 0;
+  }
+}
+
 .projects-section__container .projects-wrapper .project-card .card-after {
-  display: none;
+  opacity: 0;
+  height: 0;
 }
 
 .projects-section__container .projects-wrapper .project-card .card-after .btn-dark {
-  background: #2f3847;
+  background: #353e4d;
   border: solid 1px #293241;
   color: get-text-color(#07121b);
-  margin: 0 1%;
   width: 150px;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
@@ -471,6 +544,75 @@
 
 .projects-section__container .projects-wrapper .project-card .card-after .btn-dark:hover {
   background: #1a2029;
+}
+
+.projects-section__container .projects-wrapper .project-card .card-after .btn-site {
+  margin-left: 20%;
+}
+
+.projects-section__container .projects-wrapper .project-card .card-after .btn-code {
+  margin-right: 20%;
+}
+
+@media (max-width: 1630px) {
+  .projects-section__container .projects-wrapper .project-card .card-after .btn-site {
+    margin-left: 0;
+  }
+  .projects-section__container .projects-wrapper .project-card .card-after .btn-code {
+    margin-right: 0;
+  }
+}
+
+.projects-section__container .projects-wrapper .project-card-light-mode {
+  background: #f3f1f1;
+  border: solid 1px #d8d5d5;
+}
+
+.projects-section__container .projects-wrapper .project-card-light-mode h3, .projects-section__container .projects-wrapper .project-card-light-mode div {
+  color: #131212;
+}
+
+@media (max-width: 1630px) {
+  .projects-section__container .projects-wrapper .project-card-light-mode .card-before__content {
+    padding-left: 3%;
+  }
+}
+
+.projects-section__container .projects-wrapper .project-card-light-mode:hover .card-before {
+  background: #999999;
+}
+
+@media (max-width: 990px) {
+  .projects-section__container .projects-wrapper .project-card {
+    width: 45%;
+    margin-bottom: 5%;
+  }
+}
+
+@media (max-width: 800px) {
+  .projects-section__container .projects-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    width: 100%;
+  }
+  .projects-section__container .projects-wrapper .project-card {
+    width: 100%;
+  }
+  .projects-section__container .projects-wrapper .project-card .card-before {
+    width: 100%;
+  }
 }
 
 .projects-section__container .portfolio {
@@ -491,7 +633,7 @@
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 h1, h2, h3 {
@@ -524,8 +666,8 @@ a:link {
 }
 
 .light-mode {
-  background: #eeecec;
-  color: #292929;
+  background: #f8f4f4;
+  color: #131212;
 }
 
 .main-wrapper, footer {
