--- a/src/styles/scss/_home.scss
+++ b/src/styles/scss/_home.scss
@@ -1,11 +1,21 @@
 @import 'config';
 
-.about-me-section, .skills-section, .testimonials-section, .projects-section {
+.about-me-section,
+.skills-section,
+.testimonials-section,
+.projects-section,
+.intro-section,
+.portfolio-section {
     width: 100%;
     overflow: hidden;
 }
 
-.about-me-section__container, .skills-section__container, .testimonials-section__container, .projects-section__container {
+.about-me-section__container,
+.skills-section__container,
+.testimonials-section__container,
+.projects-section__container,
+.intro-section__container,
+.portfolio-section__container {
     max-width: 80%;
     margin: 0 auto;
     padding: 2% 0;
