--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -61,7 +61,7 @@
       flex-wrap: nowrap;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 660px) {
   .about-me-section__container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -142,7 +142,7 @@
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 660px) {
   .about-me-section__container .avatar img {
     width: 200px;
     height: 200px;
@@ -266,6 +266,7 @@
 }
 
 .testimonials-section__container .testimonials .testimonial-card__content {
+  border: red solid 1px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -283,8 +284,8 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 80%;
-  padding: 8% 5% 0 7%;
+  height: 90%;
+  padding: 30px 30px 0 30px;
 }
 
 .testimonials-section__container .testimonials .testimonial-card .quote-icon {
@@ -320,8 +321,7 @@
           align-items: center;
   width: 100%;
   width: 100%;
-  height: 30%;
-  padding-bottom: 10%;
+  border: red solid 1px;
 }
 
 .testimonials-section__container .testimonials .testimonial-card__reviewer-info img {
@@ -365,6 +365,12 @@
 .testimonials-section__container .testimonials button:hover {
   background: #0a1720;
   opacity: 0.8;
+}
+
+@media (max-width: 660px) {
+  .testimonials-section__container .testimonials .rec-arrow {
+    display: none;
+  }
 }
 
 .testimonials-section__container .testimonials .rec-dot:hover {
@@ -487,7 +493,7 @@
 
 .projects-section__container .projects-wrapper .project-card .card-before__img img {
   width: 100%;
-  height: 100%;
+  height: 200px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -497,6 +503,7 @@
   height: 100%;
   color: #c5bfbf;
   line-height: 20px;
+  padding: 20px;
 }
 
 .projects-section__container .projects-wrapper .project-card .card-before__content .client {
@@ -524,12 +531,11 @@
   }
   .projects-section__container .projects-wrapper .project-card .card-before__img {
     width: 100%;
-    height: 300px;
+    height: 200px;
   }
   .projects-section__container .projects-wrapper .project-card .card-before__content {
     width: 100%;
-    height: 180px;
-    padding: 3% 0;
+    height: 200px;
   }
 }
 
@@ -580,12 +586,6 @@
 
 .projects-section__container .projects-wrapper .project-card-light-mode h3, .projects-section__container .projects-wrapper .project-card-light-mode div {
   color: #131212;
-}
-
-@media (max-width: 1630px) {
-  .projects-section__container .projects-wrapper .project-card-light-mode .card-before__content {
-    padding-left: 3%;
-  }
 }
 
 .projects-section__container .projects-wrapper .project-card-light-mode:hover .card-before {
@@ -998,7 +998,7 @@ header {
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 660px) {
   .menu__nav-bar--links {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1104,7 +1104,7 @@ header {
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 660px) {
   .menu .menu-display {
     height: 320px;
   }
