--- a/src/styles/scss/_home.scss
+++ b/src/styles/scss/_home.scss
@@ -204,10 +204,11 @@
                     font-size: map-get($font-size , small);
                     color: $dark-mode-card-text-color;
                     &__content {
+                        border: red solid 1px;
                         @include flex-col;
                         justify-content: space-between;
-                        height: 80%;
-                        padding: 8% 5% 0 7%;
+                        height: 90%;
+                        padding: 30px 30px 0 30px;
                     }
 
                     .quote-icon {
@@ -231,8 +232,7 @@
                     &__reviewer-info {
                         @include flex-row;
                         width: 100%;
-                        height: 30%;
-                        padding-bottom: 10%;
+                        border: red solid 1px;
                         img {
                             width: 70px;
                             height: 70px;
@@ -246,7 +246,12 @@
                             padding: 8px;
                         }
                     }
+
+                    @include mobile {
+
+                    }
                 }
+
                 .testimonial-card-light-mode {
                     background: rgb(235, 235, 235);
                     color: set-text-color($light-mode-bg);
@@ -259,6 +264,14 @@
                     opacity: 0.8;
                 }
             }
+
+            .rec-arrow {
+                @include mobile {
+                   display: none;
+                }
+            }
+
+
             .rec-dot {
                 &:hover {
                     box-shadow: 0 0 1px rgba(255, 254, 254, 0.856);
@@ -329,7 +342,7 @@
                         width: 40%;
                         img {
                             width: 100%;
-                            height: 100%;
+                            height: 200px;
                             object-fit: cover;
                         }
                     }
@@ -338,6 +351,7 @@
                         height: 100%;
                         color: $dark-mode-card-text-color;
                         line-height: 20px;
+                        padding: 20px;
                         .client {
                             padding-top: 3%;
                             color: rgb(117, 114, 114);
@@ -350,12 +364,12 @@
 
                         &__img {
                             width: 100%;
-                            height: 300px;
+                            height: 200px;
                         }
                         &__content {
                             width: 100%;
-                            height: 180px;
-                            padding: 3% 0;
+                            height: 200px;
+                            // padding: 3% 0;
                         }
                     }
                 }
@@ -401,13 +415,13 @@
                     color: set-text-color($light-mode-bg);
                 }
                 border: solid 1px rgb(216, 213, 213);
-                @media (max-width: 1630px) {
-                    .card-before {
-                        &__content {
-                            padding-left: 3%;
-                        }
-                    }
-                }
+                // @media (max-width: 1630px) {
+                //     .card-before {
+                //         &__content {
+                //             // padding-left: 3%;
+                //         }
+                //     }
+                // }
 
                 &:hover {
                     .card-before {
@@ -415,6 +429,15 @@
                     }
                 }
             }
+
+            // @media (max-width: 1630px) {
+            //     height: 300px;
+            //     .card-before {
+            //         &__content {
+            //             // padding:
+            //         };
+            //     }
+            // }
 
             @include large-tablet {
                 .project-card {
