--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -1,25 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Prompt:ital,wght@0,300;0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,700&display=swap");
-.about-me-section,
-.skills-section,
-.testimonials-section,
-.projects-section,
-.intro-section,
-.portfolio-section {
-  width: 100%;
-  overflow: hidden;
-}
-
-.about-me-section__container,
-.skills-section__container,
-.testimonials-section__container,
-.projects-section__container,
-.intro-section__container,
-.portfolio-section__container {
-  max-width: 80%;
-  margin: 0 auto;
-  padding: 2% 0;
-}
-
 .intro {
   position: relative;
 }
@@ -40,7 +19,7 @@
 }
 
 .about-me-section {
-  border-bottom: solid 1px rgba(179, 175, 175, 0.1);
+  border-bottom: solid 1px rgba(105, 105, 105, 0.3);
 }
 
 .about-me-section__container {
@@ -256,7 +235,7 @@
 
 .testimonials-section__container .testimonials .testimonial-card {
   position: relative;
-  background: #0a1720;
+  background: #07202e;
   width: 100%;
   height: 100%;
   margin: 5%;
@@ -266,7 +245,6 @@
 }
 
 .testimonials-section__container .testimonials .testimonial-card__content {
-  border: red solid 1px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -321,7 +299,6 @@
           align-items: center;
   width: 100%;
   width: 100%;
-  border: red solid 1px;
 }
 
 .testimonials-section__container .testimonials .testimonial-card__reviewer-info img {
@@ -354,7 +331,9 @@
 }
 
 .testimonials-section__container .testimonials .testimonial-card-light-mode {
-  background: #ebebeb;
+  background: #cac8c8;
+  -webkit-box-shadow: 0 2px 5px rgba(63, 61, 61, 0.3);
+          box-shadow: 0 2px 5px rgba(63, 61, 61, 0.3);
   color: #131212;
 }
 
@@ -363,7 +342,7 @@
 }
 
 .testimonials-section__container .testimonials button:hover {
-  background: #0a1720;
+  background: #07202e;
   opacity: 0.8;
 }
 
@@ -407,8 +386,11 @@
 .projects-section__container .projects-wrapper .project-card {
   width: 48%;
   margin-bottom: 3%;
-  background: #0a1720;
+  background: #07202e;
   position: relative;
+  -webkit-box-shadow: 0 0 5px rgba(156, 150, 150, 0.3);
+          box-shadow: 0 0 5px rgba(156, 150, 150, 0.3);
+  cursor: pointer;
 }
 
 .projects-section__container .projects-wrapper .project-card:hover .card-after {
@@ -453,6 +435,7 @@
 }
 
 .projects-section__container .projects-wrapper .project-card:hover .card-before {
+  background: #413f3f;
   -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
   -webkit-filter: brightness(0.3);
@@ -482,9 +465,6 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
 }
 
 .projects-section__container .projects-wrapper .project-card .card-before__img {
@@ -581,6 +561,8 @@
 
 .projects-section__container .projects-wrapper .project-card-light-mode {
   background: #f3f1f1;
+  -webkit-box-shadow: 0 2px 5px rgba(63, 61, 61, 0.3);
+          box-shadow: 0 2px 5px rgba(63, 61, 61, 0.3);
   border: solid 1px #d8d5d5;
 }
 
@@ -619,9 +601,15 @@
   }
   .projects-section__container .projects-wrapper .project-card {
     width: 100%;
+    margin-bottom: 50px;
+    border-radius: 8px;
   }
   .projects-section__container .projects-wrapper .project-card .card-before {
     width: 100%;
+  }
+  .projects-section__container .projects-wrapper .project-card .card-before img {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
   }
 }
 
@@ -633,29 +621,36 @@
   margin: 0;
 }
 
-.portfolio-wrapper, section, .intro-section__container, .portfolio-section__container {
-  border: solid red 1px;
+.intro-section {
+  border-bottom: solid 1px rgba(105, 105, 105, 0.3);
 }
 
-.portfolio-wrapper {
-  height: 100vh;
-}
-
-.portfolio-wrapper .intro-section__container {
+.intro-section__container {
   text-align: center;
   width: 55%;
 }
 
-.portfolio-wrapper .intro-section__container button {
+.intro-section__container button {
   margin: 1%;
 }
 
-.portfolio-wrapper .intro-section__container button a {
+.intro-section__container button a {
   color: #ece9e9;
+}
+
+@media (max-width: 1300px) {
+  .intro-section__container {
+    width: 80%;
+  }
+}
+
+.intro-section-light-mode {
+  background: #dfe1e6;
 }
 
 .portfolio-section__container {
   text-align: center;
+  height: 80vh;
 }
 
 .portfolio-section__container .tabs {
@@ -673,12 +668,11 @@
   width: 100%;
   margin: auto;
   width: 30%;
-  border: solid red 1px;
+  margin-top: 20px;
 }
 
 .portfolio-section__container .tabs .tab {
   width: 25%;
-  border: solid red 1px;
   font-size: 0.8rem;
   font-weight: 700;
   color: #998f8f;
@@ -690,11 +684,16 @@
   display: block;
   width: 0;
   height: 5px;
+  margin-bottom: 5px;
   background: #06ac85;
 }
 
 .portfolio-section__container .tabs .active::before {
   width: 100%;
+}
+
+.portfolio-section__container .tabs .tab-light-mode {
+  color: #131212;
 }
 
 .portfolio-section__container .projects {
@@ -710,12 +709,68 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  margin-top: 30px;
 }
 
 .portfolio-section__container .projects .project-card {
   width: 48%;
-  border: solid red 1px;
-  margin: 3% 0;
+  margin: 25px 0;
+  height: 200px;
+  position: relative;
+  cursor: pointer;
+  -webkit-animation: 1s ease-in-out 0s 1 showup;
+          animation: 1s ease-in-out 0s 1 showup;
+  -webkit-box-shadow: 0 0 5px rgba(156, 150, 150, 0.3);
+          box-shadow: 0 0 5px rgba(156, 150, 150, 0.3);
+}
+
+.portfolio-section__container .projects .project-card:hover .project-card__after {
+  opacity: 1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+@media (max-width: 1630px) {
+  .portfolio-section__container .projects .project-card:hover .project-card__after {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+}
+
+.portfolio-section__container .projects .project-card:hover .project-card__before {
+  background: #413f3f;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  -webkit-filter: brightness(0.3);
+          filter: brightness(0.3);
 }
 
 .portfolio-section__container .projects .project-card__before {
@@ -734,21 +789,22 @@
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  -webkit-animation: 1s ease-out 0s 1 slideInFromLeft;
-          animation: 1s ease-out 0s 1 slideInFromLeft;
+  height: 100%;
+  background: #07202e;
 }
 
 .portfolio-section__container .projects .project-card__before img {
   width: 45%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 .portfolio-section__container .projects .project-card__before .card-content {
   text-align: left;
-  padding: 3% 0 0 3%;
+  padding: 25px;
   width: 55%;
-  border: solid red 1px;
+  height: 100%;
 }
 
 .portfolio-section__container .projects .project-card__before .card-content h3 {
@@ -766,29 +822,231 @@
 }
 
 .portfolio-section__container .projects .project-card__after {
-  visibility: hidden;
+  opacity: 0;
   height: 0;
 }
 
-@-webkit-keyframes slideInFromLeft {
-  0% {
-    -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
+.portfolio-section__container .projects .project-card__after button {
+  margin: 0 auto;
+  background: #353e4d;
+  border: solid 1px #293241;
+  color: get-text-color(#07121b);
+  width: 150px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.portfolio-section__container .projects .project-card__after button a {
+  color: #fff;
+  font-weight: 700;
+}
+
+.portfolio-section__container .projects .project-card__after button:hover {
+  background: #1a2029;
+}
+
+.portfolio-section__container .projects .project-card__before--light-mode {
+  background: #e2dede;
+  color: #131212;
+  -webkit-box-shadow: 0 2px 5px rgba(63, 61, 61, 0.3);
+          box-shadow: 0 2px 5px rgba(63, 61, 61, 0.3);
+}
+
+.portfolio-section__container .projects .empty {
+  width: 100%;
+}
+
+.portfolio-section__container .projects .empty__container {
+  margin: 0 auto;
+  padding: 100px;
+  text-align: center;
+  -webkit-animation: 1s ease-in-out 0s 1 showup;
+          animation: 1s ease-in-out 0s 1 showup;
+}
+
+.portfolio-section__container .projects .empty__container video {
+  width: 250px;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-animation: float 6s ease-in-out infinite;
+          animation: float 6s ease-in-out infinite;
+}
+
+.portfolio-section__container .projects .empty__container h3 {
+  text-transform: uppercase;
+  margin-top: 30px;
+  padding: 5px;
+  color: #06ac85;
+  -webkit-box-shadow: 0 2px 2px 2px rgba(180, 178, 178, 0.6);
+          box-shadow: 0 2px 2px 2px rgba(180, 178, 178, 0.6);
+}
+
+@media (max-width: 1630px) {
+  .portfolio-section__container .projects .project-card {
+    height: 230px;
   }
-  100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+  .portfolio-section__container .projects .project-card img {
+    width: 35%;
+    -webkit-filter: brightness(0.9);
+            filter: brightness(0.9);
+  }
+  .portfolio-section__container .projects .project-card .card-content {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
   }
 }
 
-@keyframes slideInFromLeft {
+@media (max-width: 1300px) {
+  .portfolio-section__container {
+    height: 100%;
+  }
+  .portfolio-section__container .tabs {
+    width: 50%;
+  }
+  .portfolio-section__container .projects .project-card {
+    height: 400px;
+  }
+  .portfolio-section__container .projects .project-card__before {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .portfolio-section__container .projects .project-card__before img {
+    width: 100%;
+    height: 180px;
+  }
+  .portfolio-section__container .projects .project-card__before .card-content {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1130px) {
+  .portfolio-section__container .projects .project-card {
+    height: 420px;
+  }
+}
+
+@media (max-width: 990px) {
+  .portfolio-section__container .projects .project-card {
+    height: 400px;
+  }
+}
+
+@media (max-width: 860px) {
+  .portfolio-section__container .projects .project-card {
+    height: 420px;
+  }
+}
+
+@media (max-width: 800px) {
+  .portfolio-section__container .projects {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    width: 100%;
+  }
+  .portfolio-section__container .projects .project-card {
+    width: 80%;
+    height: 100%;
+    -webkit-box-shadow: 1px 1px 1px 1px rgba(100, 100, 100, 0.6);
+            box-shadow: 1px 1px 1px 1px rgba(100, 100, 100, 0.6);
+  }
+}
+
+@media (max-width: 660px) {
+  .portfolio-section__container .tabs {
+    width: 80%;
+  }
+  .portfolio-section__container .projects .empty__container {
+    padding: 50px 0;
+  }
+}
+
+@-webkit-keyframes showup {
   0% {
-    -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
+    -webkit-transform: scale(0);
+            transform: scale(0);
   }
   100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes showup {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@-webkit-keyframes float {
+  0% {
+    -webkit-box-shadow: 0 5px 15px 0px rgba(100, 100, 100, 0.6);
+            box-shadow: 0 5px 15px 0px rgba(100, 100, 100, 0.6);
+    -webkit-transform: translatey(0px);
+            transform: translatey(0px);
+  }
+  50% {
+    -webkit-box-shadow: 0 25px 15px 0px rgba(100, 100, 100, 0.2);
+            box-shadow: 0 25px 15px 0px rgba(100, 100, 100, 0.2);
+    -webkit-transform: translatey(-20px);
+            transform: translatey(-20px);
+  }
+  100% {
+    -webkit-box-shadow: 0 5px 15px 0px rgba(100, 100, 100, 0.6);
+            box-shadow: 0 5px 15px 0px rgba(100, 100, 100, 0.6);
+    -webkit-transform: translatey(0px);
+            transform: translatey(0px);
+  }
+}
+
+@keyframes float {
+  0% {
+    -webkit-box-shadow: 0 5px 15px 0px rgba(100, 100, 100, 0.6);
+            box-shadow: 0 5px 15px 0px rgba(100, 100, 100, 0.6);
+    -webkit-transform: translatey(0px);
+            transform: translatey(0px);
+  }
+  50% {
+    -webkit-box-shadow: 0 25px 15px 0px rgba(100, 100, 100, 0.2);
+            box-shadow: 0 25px 15px 0px rgba(100, 100, 100, 0.2);
+    -webkit-transform: translatey(-20px);
+            transform: translatey(-20px);
+  }
+  100% {
+    -webkit-box-shadow: 0 5px 15px 0px rgba(100, 100, 100, 0.6);
+            box-shadow: 0 5px 15px 0px rgba(100, 100, 100, 0.6);
+    -webkit-transform: translatey(0px);
+            transform: translatey(0px);
   }
 }
 
@@ -1133,6 +1391,27 @@ header {
 
 main {
   width: 100%;
+}
+
+.about-me-section,
+.skills-section,
+.testimonials-section,
+.projects-section,
+.intro-section,
+.portfolio-section {
+  width: 100%;
+  overflow: hidden;
+}
+
+.about-me-section__container,
+.skills-section__container,
+.testimonials-section__container,
+.projects-section__container,
+.intro-section__container,
+.portfolio-section__container {
+  max-width: 85%;
+  margin: 0 auto;
+  padding: 2% 0;
 }
 
 footer {
